--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "build" : ""
+    "build" : "ee"
   },
   "keywords": [],
   "author": "",
