--- a/package.json
+++ b/package.json
@@ -4,16 +4,27 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "npx pm2 restart build/bundle.js", 
+    "start:new" :"npx pm2 start build/bundle.js",
     "dev": "nodemon app.js",
-    "build" : ""
+    "test": "mocha",
+    "build": "webpack --config webpack.config.js --mode production"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "nodemon": "^2.0.16"
+    "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.24.9",
+    "babel-loader": "^9.1.3",
+    "mocha": "^10.6.0",
+    "pm2": "^5.4.2",
+    "supertest": "^7.0.0",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-node-externals": "^3.0.0"
   }
 }
